export enum Categoria{
	ESTRENOS,
	REESTRENOS 
}
