export enum Localidad {
	CABA,
	GBA
}